--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,32 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>My Shuttle Site</title>
-  <script src="https://www.google.com/recaptcha/api.js?render=6Lc5lEErAAAAAD4k34ni0EXJZ-XLB8PY27F2gGII"></script>
-  <script defer src="home.js"></script>
+  <meta charset="UTF-8" />
+  <title>Shuttle</title>
+  <link rel="icon" href="https://www.microsoft.com/favicon.ico" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <script src="/uv/uv.bundle.js" defer></script>
+  <script src="/uv/uv.config.js" defer></script>
+  <script src="/assets/js/index.js" defer></script>
+  <script src="/assets/js/home.js" defer></script>
 </head>
 <body>
-  <h1>🚀 Shuttleへようこそ！</h1>
+  <h1 id="splash">🚀 Shuttleへようこそ！</h1>
+
   <form id="form">
     <input type="text" id="search" placeholder="検索語句を入力" />
     <button type="submit">検索</button>
   </form>
+
   <div id="suggestions"></div>
+
+  <div id="time" style="margin-top: 1em;"></div>
+
+  <label>
+    🌙 ダークモード
+    <input type="checkbox" id="checkbox" />
+  </label>
+
+  <iframe id="ifr" style="width: 100%; height: 400px; border: 1px solid #ccc; margin-top: 1em;"></iframe>
 </body>
 </html>
